tests/negative/typecheck/and.orng
fn main()->Int {true and false}